--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 group = 'net.caseif.lightbox'
-version = '1.0.0-SNAPSHOT'
+version = '1.0.0'
 
 // Extended project information
 ext.projectName = 'lightbox'
